--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,8 @@
     "typescript": "^4.6.3",
     "expo-auth-session": "3.7.1",
     "expo-random": "~12.3.0",
-    "expo-web-browser": "~11.0.0"
+    "expo-web-browser": "~11.0.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
@@ -32,5 +33,8 @@
   "overrides": {
     "react": "18.0.0"
   },
-  "private": true
+  "private": true,
+  "description": "",
+  "author": "",
+  "license": "ISC"
 }
